comment out some code

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ heads, generating multiple tokens in parallel.
 						<th style="vertical-align : middle;text-align: center;" class="tok-type tok-d"></th>
 						<th style="vertical-align : middle;text-align: center;" class="tok-type tok-d">Decoupled Tokenizer</th>
 						<th style="vertical-align : middle;text-align: center;" colspan="2" class="tok-type tok-s">Semi-Decoupled Tokenizer</th>
-						<th style="vertical-align : middle;text-align: center;" colspan="6" class="tok-type">Coupled Tokenizer</th>
+						<th style="vertical-align : middle;text-align: center;" colspan="5" class="tok-type">Coupled Tokenizer</th>
 						
 
 					</tr>
@@ -143,7 +143,7 @@ heads, generating multiple tokens in parallel.
 						<th style="vertical-align : middle;text-align: center;" class="tok-s">SpeechTokenizer-8L</th>
 						<th style="vertical-align : middle;text-align: center;" class="tok-name">Encodec-4L</th>
 						<th style="vertical-align : middle;text-align: center;" class="tok-name">Encodec-8L</th>
-						<th style="vertical-align : middle;text-align: center;" class="tok-name">WavTokenizer</th>
+						<!-- <th style="vertical-align : middle;text-align: center;" class="tok-name">WavTokenizer</th> -->
 						<th style="vertical-align : middle;text-align: center;" class="tok-name">WavTokenizer-v2</th>
 						<th style="vertical-align : middle;text-align: center;" class="tok-name">StableCodec</th>
 						<th style="vertical-align : middle;text-align: center;" class="tok-name">BigCodec</th>
@@ -175,11 +175,11 @@ heads, generating multiple tokens in parallel.
 					<td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<p><b>Failed</b></p>
 					</td>
-					<td style="vertical-align : middle;text-align: center;" class="tok-name">
+					<!-- <td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<audio controls src="audios/tok-comp/wavtok-v1/case-1.wav" style="width: 225px;"></audio>
 						<br/>
 						WER: 25.0&emsp;&emsp;UTMOS: 4.31
-					</td>
+					</td> -->
 					<td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<audio controls src="audios/tok-comp/wavtok-v2/case-1.wav" style="width: 225px;"></audio>
 						<br/>
@@ -222,9 +222,9 @@ heads, generating multiple tokens in parallel.
 					<td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<p><b>Failed</b></p>
 					</td>
-					<td style="vertical-align : middle;text-align: center;" class="tok-name">
+					<!-- <td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<p><b>Failed</b></p>
-					</td>
+					</td> -->
 					<td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<audio controls src="audios/tok-comp/wavtok-v2/case-2.wav" style="width: 225px;"></audio>
 						<br/>
@@ -270,9 +270,9 @@ heads, generating multiple tokens in parallel.
 						<br/>
 						WER: 15.4&emsp;&emsp;UTMOS: 2.82
 					</td>
-					<td style="vertical-align : middle;text-align: center;" class="tok-name">
+					<!-- <td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<p><b>Failed</b></p>
-					</td>
+					</td> -->
 					<td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<audio controls src="audios/tok-comp/wavtok-v2/case-3.wav" style="width: 225px;"></audio>
 						<br/>
@@ -319,9 +319,9 @@ heads, generating multiple tokens in parallel.
 						<br/>
 						WER: 37.5&emsp;&emsp;UTMOS: 3.69
 					</td>
-					<td style="vertical-align : middle;text-align: center;" class="tok-name">
+					<!-- <td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<p><b>Failed</b></p>
-					</td>
+					</td> -->
 					<td style="vertical-align : middle;text-align: center;" class="tok-name">
 						<audio controls src="audios/tok-comp/wavtok-v2/case-bad.wav" style="width: 225px;"></audio>
 						<br/>
